--- a/13ExpressRounting2/views/carDetails.hbs
+++ b/13ExpressRounting2/views/carDetails.hbs
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hi from handlebars</h1>
-<h2>{{data}}</h2>
+<h1>Car Details</h1>
+
+<h2>{{car.make}}</h2>
+<h2>{{car.model}}</h2>
+<h2>{{car.year}}</h2>
 </body>
 </html>
