--- a/13ExpressRounting2/views/cars.hbs
+++ b/13ExpressRounting2/views/cars.hbs
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hi from handlebars</h1>
-<h2>{{data}}</h2>
+<h1>Cars list</h1>
+<ul>
+    {{#each cars}}
+        <li>{{this.model}}</li>
+    {{/each}}
+</ul>
+
 </body>
 </html>
